force-app/main/default/objects/CaseCoverage__c/CaseCoverage__c.object-meta.xml
<CustomObject>
    <label>Case Coverage</label>
    <nameField>
        <label>Case Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>