force-app/main/default/objects/CaseCoverage__c/fields/CodeGarantie__c.field-meta.xml
<CustomField>
    <fullName>CodeGarantie__c</fullName>
    <label>Code Garantie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>