force-app/main/default/objects/CaseCoverage__c/fields/EvaluationActuelle__c.field-meta.xml
<CustomField>
    <fullName>EvaluationActuelle__c</fullName>
    <label>Evaluation actuelle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>