force-app/main/default/objects/CaseCoverage__c/fields/Insurance_Policy_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy Coverage</label>
    <referenceTo>InsurancePolicyCoverage__c</referenceTo>
    <relationshipLabel>Case Coverages</relationshipLabel>
    <relationshipName>Case_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>