force-app/main/default/objects/CaseCoverage__c/fields/NatureEvaluation__c.field-meta.xml
<CustomField>
    <fullName>NatureEvaluation__c</fullName>
    <label>Nature d&apos;évaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporel</fullName>
            </value>
            <value>
                <fullName>Matériel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>